--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             loading="lazy" sizes="(max-width: 100%) 100vw, 100%"
             srcset="https://uploads-ssl.webflow.com/64f576336a5bfc55e5ca1371/64f576974ee87c113f962e0d_Stargate%20bridge-p-500.png 500w, https://uploads-ssl.webflow.com/64f576336a5bfc55e5ca1371/64f576974ee87c113f962e0d_Stargate%20bridge-p-800.png 800w, https://uploads-ssl.webflow.com/64f576336a5bfc55e5ca1371/64f576974ee87c113f962e0d_Stargate%20bridge-p-1080.png 1080w, https://uploads-ssl.webflow.com/64f576336a5bfc55e5ca1371/64f576974ee87c113f962e0d_Stargate%20bridge.png 1348w"
             alt="" /></a>
-    <h1 class="heading">Stargate Bridge: Bridge Funds Using The Stargate Bridge</h1>
+    <h1 class="heading">Stargate Bridge: Guide For Stargate Bridge</h1>
     <div class="rich-text-block w-richtext">
         <p>The omnichain universe is here to stay, but the infrastructure is fragmented. For bridging, the focus is on
             user driven asset movement between chains. Although this sounds like an intuitive approach, it’s actually
